<resources>
    <string name="app_name">DailyDiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_text">Tell us about your day here!</string>
    <string name="add_an_image">Add an image</string>
    <string name="save">Save</string>
    <string name="horrible">Horrible</string>
    <string name="bad">Bad</string>
    <string name="neutral">Neutral</string>
    <string name="good">Good</string>
    <string name="amazing">Amazing</string>
    <string name="image_description">The image the user attached</string>
    <string name="title">Title</string>
    <string name="daily_diary">Daily Diary</string>
    <string name="new_entry">New entry</string>
    <string name="edit_button">Edit button</string>
    <string name="delete_button">Delete button</string>
    <string name="entries">Entries</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="view_entries">View entries</string>
    <string name="sort_asc">Sort by date ascending</string>
    <string name="sort_desc">Sort by date descending</string>
</resources>