<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".NewEntryFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:background="@color/white"

        android:autofillHints="title"
        android:hint="@string/title"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton android:id="@+id/rbHorrible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horrible"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:checked="false"/>

        <RadioButton android:id="@+id/rbBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:checked="false"/>

        <RadioButton android:id="@+id/rbNeutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutral"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:checked="false"/>

        <RadioButton android:id="@+id/rbGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:checked="false"/>

        <RadioButton android:id="@+id/rbAmazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:checked="false"/>

    </RadioGroup>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/radioGroup"
        android:padding="20dp"
        android:background="@color/white"

        android:inputType="textMultiLine"
        android:autofillHints="content"
        android:hint="@string/content_text"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple"
        android:gravity="top"/>

    <!--<Button
        android:id="@+id/btnAddImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/add_an_image"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddImage"
        android:contentDescription="@string/image_description" /> -->

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/white"/>


</RelativeLayout>