<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dailyDiaryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/daily_diary"/>

    <Button
        android:id="@+id/btnNewEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyDiaryTitle"
        android:layout_marginBottom="20dp"
        android:text="@string/new_entry"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnPrevEntries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNewEntry"
        android:layout_marginBottom="20dp"
        android:text="@string/view_entries"
        android:textSize="20sp"/>

</RelativeLayout>