<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvEntries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/entries" />

    <Button
        android:id="@+id/btnToMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEntries"
        android:layout_marginBottom="5dp"
        android:text="@string/back_to_menu"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnToMenu"
        android:layout_marginBottom="20dp"
        android:text="@string/sort_asc"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSort">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:listitem="@layout/entry_list_item" />
    </ScrollView>

</RelativeLayout>